--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h3 {
     margin-top: 15px;
     text-align: center;
 }
+
 h4 {
     color: #000000;
     margin-top: 13px;
@@ -40,8 +41,41 @@ main {
     padding: 20px;
 }
 
-.menu-section {
+.tabs {
     margin-top: 30px;
+}
+
+.tab-links {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.tab-button {
+    background-color: #e63946;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 0 5px;
+    border-radius: 5px;
+}
+
+.tab-button.active {
+    background-color: #1a1a1a;
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-pane {
+    display: none;
+}
+
+.tab-pane.active {
+    display: block;
 }
 
 .menu {
@@ -108,4 +142,3 @@ footer {
     width: 50px;
     height: 50px;
 }
-
