--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,9 @@ footer {
     margin-top: 10px;
     font-weight: bold;
     color: #333;
+    margin: 20px auto; /* Centra el botón */
+    text-align: center;
+    width: fit-content;/* Ajusta el ancho del botón a su contenido */
 }
 .submenu ul {
     list-style: none;
