--- a/styles.css
+++ b/styles.css
@@ -163,13 +163,12 @@ footer {
     background: #ffcc00;
     padding: 10px;
     border-radius: 8px;
+    margin-top: 10px;
     font-weight: bold;
     color: #333;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
+    margin: 20px auto; /* Centra el botón */
+    text-align: center;
+    width: fit-content;/* Ajusta el ancho del botón a su contenido */
 }
 .submenu ul {
     list-style: none;
