--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,6 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .item {
@@ -152,6 +149,8 @@ footer {
     border-radius: 8px;
     font-weight: bold;
     color: #333;
+    width: 90%;
+    margin-top: 10px;
 }
 .submenu ul {
     list-style: none;
